--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: python
-python:
-    "3.6"
-virtualenv:
-    system_site_packages: true
 
+python:
+    - "3.7-dev"
 install:
     - pip install --upgrade pip
     - pip install --upgrade -r requirements.txt
