--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 
 python:
-    - "3.7-dev"
+    - "3.5"
+virtualenv:
+  system_site_packages: false
+
 install:
     - pip install --upgrade pip
     - pip install --upgrade -r requirements.txt
